kubernetes/apps/network/blocky/blocky-monitoring.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blocky
  labels:
    tenant.cozystack.io/tenant-root: ""
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
---
# CiliumNetworkPolicy to allow Grafana ingress traffic (in tenant-root namespace) to access Blocky Postgres database.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-grafana-to-blockydb-ro
  namespace: tenant-root
spec:
  endpointSelector:
    matchLabels:
      app: grafana
  egress:
    - toServices:
        - k8sService:
            namespace: blocky
            serviceName: blocky-db-ro
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-grafana-to-blockydb
  namespace: blocky
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: blocky-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": tenant-root
            "k8s:app": grafana
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: blocky
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
